@@ -25,19 +25,15 @@ import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.ValidationContext;
 import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.controller.AbstractControllerService;
-import org.apache.nifi.controller.ControllerServiceInitializationContext;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.processor.util.StandardValidators;
-import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.schema.access.SchemaField;
 import org.apache.nifi.schema.access.SchemaNotFoundException;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.serialization.record.SchemaIdentifier;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
@@ -67,16 +63,9 @@ public class AvroSchemaRegistry extends AbstractControllerService implements Sch
             .required(true)
             .build();
 
-    private List<PropertyDescriptor> propertyDescriptors = new ArrayList<>();
-
-
-    @Override
-    protected void init(ControllerServiceInitializationContext config) throws InitializationException {
-        super.init(config);
-        List<PropertyDescriptor> _propertyDescriptors = new ArrayList<>();
-        _propertyDescriptors.add(VALIDATE_FIELD_NAMES);
-        propertyDescriptors = Collections.unmodifiableList(_propertyDescriptors);
-    }
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            VALIDATE_FIELD_NAMES
+    );
 
     @Override
     public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
@@ -91,7 +80,7 @@ public class AvroSchemaRegistry extends AbstractControllerService implements Sch
                     final SchemaIdentifier schemaId = SchemaIdentifier.builder().name(descriptor.getName()).build();
                     final RecordSchema recordSchema = AvroTypeUtil.createSchema(avroSchema, newValue, schemaId);
                     recordSchemas.put(descriptor.getName(), recordSchema);
-                } catch (final Exception e) {
+                } catch (final Exception ignored) {
                     // not a problem - the service won't be valid and the validation message will indicate what is wrong.
                 }
             }
@@ -143,7 +132,7 @@ public class AvroSchemaRegistry extends AbstractControllerService implements Sch
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return propertyDescriptors;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
